[Fix #1687] Align sign in/up form to the top

--- a/app/assets/stylesheets/new_design/layouts.scss
+++ b/app/assets/stylesheets/new_design/layouts.scss
@@ -16,7 +16,7 @@
 
     @media (min-width: $two-columns-breakpoint) {
       flex-direction: row;
-      align-items: center;
+      align-items: stretch;
       justify-content: center;
     }
   }
@@ -25,7 +25,6 @@
     padding: $two-columns-padding 0 0;
     width: 100%;
     max-width: 500px;
-    margin: auto;
 
     @media (min-width: $two-columns-breakpoint) {
       padding: $two-columns-padding;
